# GOntact

./: .gitignore  GO.frequency.py  Makefile  README.md  baits.GO.annotation.py  compute.tests.R  dune-project  enhancer.contacts.py  foreground.and.background.contacts.py  gontact-server.opam  gontact.opam
app/: dune  gontact_app.ml  gontact_utils.ml
etc/: cmds.compare.sh  cmds.enrichment.shared.contacts.sh  cmds.great.fixed.size.sh  cmds.sh  cmds.shared.contacts.sh  cmds.sim.sh
etc/main_figures/: data.enhancers.R  data.gene.enhancer.association.R  data.regulatory.domains.R  figure1.R  figure23.R
etc/reformat_PCHiC_data/: format.ibed.files.R  format.ibed.files.simulations.R
lib/: CLI.ml  CLI.mli  CLI_utils.ml  CLI_utils.mli  annotate_baits_cmd.ml  chromatin_contact.ml  chromatin_contact.mli  chromatin_contact_graph.ml  chromatin_contact_graph.mli  contact_enrichment_analysis.ml  contact_enrichment_analysis.mli  dune  enhancer_annotation.ml  enhancer_annotation.mli  fGBG.ml  fGBG.mli  functional_annotation.ml  functional_annotation.mli  gO_term_set.ml  gO_term_set.mli  gaf.ml  gaf.mli  genomic_annotation.ml  genomic_annotation.mli  genomic_interval.ml  genomic_interval.mli  genomic_interval_collection.ml  genomic_interval_collection.mli  go_enrichment.ml  go_enrichment.mli  gontact_tests.ml  great.ml  great.mli  hybrid_enrichment_analysis.ml  hybrid_enrichment_analysis.mli  let_syntax.ml  obo.ml  obo.mli  ontology.ml  ontology.mli  (+4 more)
scripts/GO_enrichment_GREAT/: compute.expected.values.pl  compute.expected.values.sh  compute.observed.values.pl  compute.observed.values.sh  define.regulatory.regions.R  extract.canonical.transcripts.R  test.enrichment.R
scripts/GO_enrichment_contacts/: GO.frequency.py  baits.GO.annotation.py  compute.tests.R  foreground.and.background.contacts.py  run.GOntact.sh  run.all.options.sh  simplify.interactions.sh
scripts/compare_methods/: compare.GOntact.parameters.R  compare.GREAT.GOntact.R  compare.GREAT.GOntact.extended.R  compare.GREAT.parameters.R  compare.associated.enhancers.pl  compare.associated.enhancers.sh
scripts/main_figures/: data.GO.enhancer.association.R  data.common.GO.genes.R  data.enrichment.results.R  data.gene.enhancer.association.R  data.motif.enrichment.R  figure1.R  figure2.R  figure23.R  figure3.R  figure4.R
scripts/motif_enrichment/: extract.background.enhancers.R  extract.enhancer.annotation.R  extract.sequences.pl  extract.sequences.sh  extract.target.genes.R  run.fimo.sh  run.homer.sh
scripts/process_GO_annotations/: add.description.to.clusters.R  identify.redundant.categories.pl  identify.redundant.categories.sh  propagate.GO.annotations.pl  (+1 more)
server/: GOntact_data_current.html  draw.logo.R  dune  gontact_client.ml  gontact_server.ml  gontact_shared.ml  template_index.html
server/static/: template_GREAT.html  template_index.html  template_results.html
server/static/css/: gontact.css
(+2 files in other folders)
