(executable
  (name gontact_app)
  (public_name gontact)
  (package gontact)
  (libraries gontact)
  (modules Gontact_app)
  (preprocess (pps ppx_deriving.show)))

(executable
  (name gontact_utils)
  (public_name gontact-utils)
  (package gontact)
  (libraries gontact)
  (modules Gontact_utils)
  (preprocess (pps ppx_deriving.show)))
