(executable
  (name gontact_server)
  (public_name gontact_server)
  (modules Gontact_server)
  (libraries core_unix dream gontact gontact_shared tyxml)
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_sexp_conv ppx_yojson_conv tyxml-ppx)))

(executable
  (name gontact_client)
  (modules Gontact_client)
  (modes js)
  (libraries base brr gontact_shared js_of_ocaml parsexp))

(library
  (name gontact_shared)
  (modules Gontact_shared)
  (libraries base)
  (preprocess (pps ppx_sexp_conv ppx_yojson_conv)))
