(executable
  (name gontact_server)
  (public_name gontact_server)
  (modules Gontact_server)
  (libraries core_unix directories dream geoip gontact gontact_shared leveldb tyxml)
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_sexp_conv ppx_yojson_conv tyxml-ppx)))

(executable
  (name gontact_client)
  (modules Gontact_client)
  (modes js)
  (js_of_ocaml (flags --opt 3))
  (libraries base brr gontact_shared note.brr parsexp)
  )

(library
  (name gontact_shared)
  (modules Gontact_shared)
  (libraries base)
  (preprocess (pps ppx_sexp_conv ppx_yojson_conv)))

(env
  (dev (js_of_ocaml (compilation_mode whole_program))))
